[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "text-based-rpg-split"
version = "0.1.0"
[tool.poetry.dependencies]
blessed = "^1.17"
python = "^3.7"
[tool.poetry.dev-dependencies]
